{
  "app-name": "VILOGS",
  "sign-in": "Sign In",
  "sign-up": "Sign Up",
  "email": "Email",
  "password": "Password",
  "remember_me": "Remember me",
  "forgot_password": "Forgot your password?",
  "not-account": "Don't have an account?",
  "have-account": "Already have an account?",
  "full-name": "Full name",
  "enter-full-name": "Enter full name",
  "enter-email": "Enter Email",
  "enter-password": "Enter Password",
  "vehicle-brand": "Vehicle brand",
  "vehicle-model": "Vehicle model",
  "select": "Select",
  "vehicle-years": "Vehicle manufacturing years",
  "confirm-password": "Confirm password",
  "engineer": "Engineer",
  "individual": "Individual",
  "accept": "Accept",
  "term-policies": "Term and policies",
  "one-time-password": "Enter your one time password send to your email",
  "enter": "Enter",
  "reset-password": "Reset your password",
  "enter-to-reset": "Please enter your email to reset your password",
  "send": "Send",
  "success": "Successful",
  "success-change-password": "Password has been successfully changed",
  "go-sign": "Go to sign in page",
  "enter-new-password": "Enter new password",
  "validate-value": "Please enter a valid value",
  "weak-password": "Weak password",
  "exist-user": "An exist user account",
  "incorrect-data": "The email or password is incorrect",
  "incorrect-email": "This email not exist",
  "please-wait": "Please wait",
  "menu": "Menu",
  "home": "Home",
  "history": "History",
  "realtime-data": "Realtime data",
  "recent-date": "Recent date",
  "chart-data": "Chart data",
  "fuel": "Fuel",
  "vehicle-temp": "Vehicle average Temperature",
  "temp-very-high": "Your Car Temperature is very high",
  "issues": "Issues",
  "past": "Past",
  "in-progress": "In progress",
  "assign-engineer": "Assign engineer",
  "current-engineer": "Current Engineer",
  "available-engineer": "Available engineer",
  "assign-an-engineer": "Assign An Engineer",
  "enter-engineer-id": "Enter the engineer ID",
  "enter-id": "Enter ID",
  "choose-duration": "Choose Duration",
  "duration": "Duration",
  "assign": "Assign",
  "name": "Name",
  "id": "ID",
  "availability": "Availability",
  "not-available": "Not available",
  "available": "Available",
  "profile-photo": "Profile photo",
  "rate": "Rate",
  "save": "Save",
  "logout": "Logout",
  "select-vehicle-brand": "Select vehicle brand",
  "select-vehicle-model": "Select vehicle model",
  "edit-profile": "Edit profile"
}